--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,2 @@
 AUTOMAKE_OPTIONS = foreign
-SUBDIRS = SeqLib/fermi-lite SeqLib/htslib SeqLib/bwa SeqLib/src src
+SUBDIRS = SeqLib/htslib SeqLib/bwa SeqLib/src src
